# X-Signal

./: .gitignore  README.md  pyproject.toml
deploy/systemd/: xsignal-vpe-live-auto-cycle.service  xsignal-vpe-live-auto-cycle.timer  xsignal-vpe-live-stream-daemon.service  xsignal-vpe-testnet-auto-cycle.service  xsignal-vpe-testnet-auto-cycle.timer  xsignal-vpe-testnet-stream-daemon.service
docs/operations/: vpe-live-runbook.md
docs/superpowers/plans/: 2026-05-06-canonical-export-foundation.md  2026-05-07-canonical-timeframes-fill-policy.md  2026-05-07-momentum-rotation-v1.md  2026-05-07-volume-price-efficiency-scan.md  2026-05-07-volume-price-efficiency-trailing-stop.md  2026-05-07-volume-price-efficiency-v1.md  2026-05-09-vpe-1m-recovery.md  2026-05-09-vpe-binance-testnet-adapter.md  2026-05-09-vpe-live-core.md  2026-05-09-vpe-live-daemon-production.md  2026-05-09-vpe-persistent-reconcile-runner.md  2026-05-09-vpe-seed-efficiency-signal.md  2026-05-09-vpe-testnet-lifecycle.md  2026-05-09-vpe-websocket-daemon.md  2026-05-10-full-universe-websocket-ingest.md
docs/superpowers/specs/: 2026-05-06-strategy-backtest-architecture-design.md  2026-05-07-canonical-fill-policy-design.md  2026-05-07-momentum-rotation-v1-design.md  2026-05-07-volume-price-efficiency-scan-design.md  2026-05-07-volume-price-efficiency-trailing-stop-design.md  2026-05-07-volume-price-efficiency-v1-design.md  (+3 more)
scripts/: validate_binance_klines.py
src/xsignal/data/: catalog.py  (+6 more)
tests/data/: test_canonical_bars.py  test_canonical_export.py  test_catalog.py  test_locks.py  test_query_templates.py
(+118 files in other folders)
